# This BUILD file is used in particular by rules_haskell. In order to import and use the bundle.
load("wasm_cc_toolchain.bzl", "cc_toolchain_config")
exports_files(glob(["**"]))

filegroup(
    name = "asterius_binaries",
    srcs = glob(["bazel_build/wrappers/**"]),
    visibility = ["//visibility:public"],
    data = [":local_asterius"],
)

filegroup(
    name = "local_asterius",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wasi_files",
    # srcs = glob(["bin/**", "lib", "share", "resources/wasilibc/**"]),
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cc_toolchain_config(
    name = "wasm_cc_toolchain_config_linux_x86_64",
    visibility = ["//visibility:public"],
    file_from_wasi_sysroot_include = "//:share/wasi-sysroot/include/__errno.h",
    file_from_asterius_libs_include = "//:asterius-0.0.1_data/.boot/asterius_lib/include/Cmm.h",
    
)

cc_toolchain(
    name = "wasm_cc",
    toolchain_config = ":wasm_cc_toolchain_config_linux_x86_64",
    all_files = ":wasi_files",
    compiler_files = ":wasi_files",
    ar_files = ":wasi_files",
    dwp_files = ":wasi_files",
    linker_files = ":wasi_files",
    objcopy_files = ":wasi_files",
    strip_files = ":wasi_files",
    # libc_top = ":wasi_files",
)

# sh_binary(
#     name = "ahc_wrapper",
#     srcs = ["test/wrappers/ahc"],
#     visibility = ["//visibility:public"],
# )

# sh_binary(
#     name = "ahc_cabal_wrapper",
#     srcs = ["test/wrappers/ahc-cabal"],
#     visibility = ["//visibility:public"],
# )

# sh_binary(
#     name = "ahc_dist_wrapper",
#     srcs = ["test/wrappers/ahc-dist"],
#     visibility = ["//visibility:public"],
# )
# sh_binary(
#     name = "ahc_ld_wrapper",
#     srcs = ["test/wrappers/ahc-ld"],
#     visibility = ["//visibility:public"],
# )
# sh_binary(
#     name = "ahc_link_wrapper",
#     srcs = ["test/wrappers/ahc-link"],
#     visibility = ["//visibility:public"],
# )

# sh_binary(
#     name = "ahc_pkg_wrapper",
#     srcs = ["test/wrappers/ahc-pkg"],
#     visibility = ["//visibility:public"],
# )
