cabal-version:  1.24
name:           asterius-prelude
version:        0.0.1
category:       Prelude
stability:      alpha
homepage:       https://github.com/tweag/asterius#readme
bug-reports:    https://github.com/tweag/asterius/issues
maintainer:     Shao Cheng <cheng.shao@tweag.io>
copyright:      (c) 2018 Tweag I/O
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/tweag/asterius

library
  exposed-modules:
      Asterius.ByteString
      Asterius.Prim
      Asterius.Types
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , ghc-prim
  default-language: Haskell2010
