name:           time-bench
version:        0.1.0.0
author:         Winter
homepage:       https://github.com/haskell/time
bug-reports:    https://github.com/haskell/time/issues
cabal-version:  >=1.10
build-type:     Simple


executable time-bench
    hs-source-dirs: ../lib, .
    main-is: Main.hs
    other-modules:
        Data.Time.Clock.Internal.CTimespec
    default-language: Haskell2010
    default-extensions:
        Rank2Types
        DeriveDataTypeable
        StandaloneDeriving
        CPP
    ghc-options: -Wall -fwarn-tabs
    c-sources: ../lib/cbits/HsTime.c
    include-dirs: ../lib/include
    if os(windows)
        install-includes:
            HsTime.h
    else
        install-includes:
            HsTime.h
            HsTimeConfig.h
    build-depends:
        base >= 4.7 && < 5,
        deepseq >= 1.1,
        time,
        criterion
    if os(windows)
        build-depends: Win32
